@@ -21,6 +21,9 @@
 	of `remove-newlines' and `beautify-symbol-name' functions. Modules now
 	use sawfish.cfg.utils instead.
 
+	* lisp/sawfish/gtk/widgets/list.jl: use the nicer gtk-stock-buttons rather
+	than plain ones
+
 2010-09-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/simple-dialog.jl: renamed sawfish.gtk.stock
 	to sawfish.gtk.widgets.simple-dialog as the functions `about-dialog'
